Fixed horizontal scroll bar from landing page

--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -1,19 +1,3 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-/* .page-container {
-    display: flex;
-}
-
-.drawer-side {
-    width: 250px; 
-}
-
-.main-content {
-    flex: 1; 
-}
-
-.page-container.drawer-side .drawer{
-    transform: translateX(0); 
-*/
